syntax-lower/src/syntax/comparison/snapshots/syntax_lower__syntax__comparison__list_comparison__tests__complex.snap
---
source: syntax-lower/src/syntax/comparison/list_comparison.rs
expression: ast
---
Ok(
    Program {
        statements: [
            Statement {
                condition: Condition {
                    kind: Binary(
                        ComparisonCondition {
                            comparison: Comparison {
                                kind: List(
                                    ListComparison {
                                        parameter: QuestionParameter {
                                            id: NumericLiteral {
                                                value: 123,
                                            },
                                        },
                                        list: ListLiteral {
                                            values: [
                                                SingularLiteral {
                                                    kind: Numeric(
                                                        NumericLiteral {
                                                            value: 1,
                                                        },
                                                    ),
                                                },
                                                SingularLiteral {
                                                    kind: String(
                                                        StringLiteral {
                                                            value: "\"foo\"",
                                                        },
                                                    ),
                                                },
                                            ],
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                },
            },
        ],
    },
)
